tests/diagnostics/expressions/calls/unknown_function/expect.txt
# exit: 1
lib.coppice:2:12: error: unknown function 'missing'
      return missing(1)
             ^
